<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="partyplaner.partyplaner.ContactForm.ContactForm">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/betreffText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/betreff"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/betreffInputText"
        app:layout_constraintEnd_toStartOf="@+id/betreffInputText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:labelFor="@+id/betreffInputText"
        android:id="@+id/betreffInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/VornameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/vorname"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/VornameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betreffText" />

    <EditText
        android:id="@+id/VornameInput"
        android:labelFor="@+id/VornameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betreffInputText" />

    <TextView
        android:id="@+id/NachnameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/nachname"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/NachnameInput"
        app:layout_constraintEnd_toStartOf="@+id/NachnameInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NachnameInput"
        android:labelFor="@+id/NachnameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VornameInput" />

    <TextView
        android:id="@+id/TelefonText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/telefon"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TelefonInput"
        app:layout_constraintEnd_toStartOf="@+id/TelefonInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TelefonInput"
        android:labelFor="@+id/TelefonInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NachnameInput" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/e_mail"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EmailInput"
        app:layout_constraintEnd_toStartOf="@+id/EmailInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TelefonInput" />

    <TextView
        android:id="@+id/Email2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/e_mail_wiederholen"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Email2Input"
        app:layout_constraintEnd_toStartOf="@+id/Email2Input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Email2Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/Email2Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput" />

    <TextView
        android:id="@+id/AnfrageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/ihre_anfrage"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email2Text" />

    <EditText
        android:id="@+id/AnfrageInput"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:labelFor="@+id/AnfrageInput"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnfrageText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/SendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/senden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnfrageInput" />

</android.support.constraint.ConstraintLayout>
